--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "microcms-js-sdk": "^3.1.1",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "saas": "^1.0.0",
+    "sass": "^1.77.4"
   },
   "devDependencies": {
     "eslint": "^8",
