--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "microcms-js-sdk": "^3.1.1",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
+    "or": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
     "saas": "^1.0.0",
-    "sass": "^1.77.4"
+    "sass": "^1.77.4",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "eslint": "^8",
